--- a/templates/index.html
+++ b/templates/index.html
@@ -69,11 +69,11 @@
           <h1><strong>Welcome, Adventurer!</strong></h1>
           <p>
             Step into the tavern and explore new adventures with fellow travellers. Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my finest ale.<br>
-            Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br>
+            <br>Select the <strong>Characters</strong> option from the menu to create or manage your rosters.<br>
             You can also team up with other adventurers with the <strong>Party</strong> tab and check their overall health or mana levels.<br>
             We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during your quest via the <strong>Sign-up/Log-in</strong> menu tab.<br>
             To return to the bar, just click the <strong>BattleRoster Logo</strong>.<br>
-            Any problems, or if that fella in the corner is bothering you, just let me know in the <strong>Contact</strong> tab.
+            <br>Any problems, or if that fella in the corner is bothering you, just let me know in the <strong>Contact</strong> tab.
           </p>
         </div>
       </div>
